Kubernetes/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-kube-prome-prometheus
            port:
              number: 9090
  defaultBackend:
    service:
      name: kube-prometheus-kube-prome-prometheus
      port:
        number: 9090
